--- a/eiken3.html
+++ b/eiken3.html
@@ -13,7 +13,7 @@
 <header>
     <nav>
       <ul>
-        <li><a href="eiken5.html">Level 5</a></li>
+        <li><a href="index.html">Level 5</a></li>
         <li><a href="eiken4.html">Level 4</a></li>
         <li><a href="eiken3.html">Level 3</a></li>
         <li><a href="eikenp2.html">Level Pre-2</a></li>
