--- a/eiken3.html
+++ b/eiken3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,
     initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="styles.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <script defer src="script3.js"></script>
 
     <title>Eiken Quiz App</title>
